fixed spacing of results on search result page

--- a/src/stylesheets/components/_box.scss
+++ b/src/stylesheets/components/_box.scss
@@ -1,8 +1,12 @@
 .results__box{
   background-color: $color-grey-dark;
-  border-radius: 10px;
-  padding: 2rem;
-  margin: 2rem 0;
+  // border-radius: 10px;
+  // padding-top: .5rem;
+  // padding-left: .5rem;
+  // padding-bottom: 2rem;
+  padding: .5rem 1rem 2rem 1rem;
+  // padding: 2rem;
+  // margin: 2rem 0;
 
   @include respond(phone){
    border-radius: 0;
